crates/streamfy-connector-common/ui-test/ui/config_use_reserved_name_transforms.stderr
error: Custom config name conflicts with reserved names: 'meta' and 'transforms'
 --> ui-test/ui/config_use_reserved_name_transforms.rs:7:1
  |
7 | struct CustomConfig {}
  | ^^^^^^

error[E0308]: mismatched types
 --> ui-test/ui/config_use_reserved_name_transforms.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ expected `()`, found `TopicProducer<SpuSocketPool>`
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          -------- arguments to this function are incorrect
  |
  = note: expected unit type `()`
                found struct `streamfy::producer::TopicProducer<streamfy::spu::SpuSocketPool>`
note: function defined here
 --> ui-test/ui/config_use_reserved_name_transforms.rs:4:10
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          ^^^^^^^^                       ------------
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> ui-test/ui/config_use_reserved_name_transforms.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<_, _>`
  |
  = note: expected unit type `()`
                  found enum `Result<_, _>`
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)
